@@ -1,4 +1,23 @@
 # SAE 2.01 / 2.02
 Dagneaux Nicolas - Degraeve Paul - Martel Alexandre
 ---
+
+## Application avec interface graphique
+
+### Pré-requis
+
+JavaFX version 17.0.2
+
+### Installation
+
+L'installation nécessite uniquement le téléchargement de [Affectator-SIMULATOR3000.jar](https://nextcloud.univ-lille.fr/index.php/f/228679189)
+
+### Utilisation
+
+```Bash
+java --module-path /chemin/vers/javafx-sdk-17.0.2/lib --add-modules javafx.controls,javafx.fxml -jar Affectator-SIMULATOR3000.jar
+```
+
+## Documentation
+
 La javadoc se trouve [ici](https://pandab1.github.io)
